--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,7 +9,7 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL220"
+name: "CodeQL"
 
 on:
   push:
@@ -30,7 +30,7 @@ jobs:
       security-events: write
 
     strategy:
-      fail-fast: fast
+      fail-fast: fales
       matrix:
         language: [  ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
