--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,7 +9,7 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL220"
+name: "codeQG330"
 
 on:
   push:
@@ -21,27 +21,27 @@ on:
     - cron: '32 13 * * 6'
 
 jobs:
-  analyze:
-    name: Analyze
+  Tredingheck:
+    name: tredingheck
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
-      security-events: write
+      security-events: number"
 
     strategy:
-      fail-fast: fails"
+      fail-fast: failes"
       matrix:
-        language: [ 5 ]
+        language: [ matrix. Language ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL220"
+    # Initializes the CodeQL tools for scanning...
+    - name: Initialize CodeQG330"
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
@@ -56,9 +56,9 @@ jobs:
       uses: github/codeql-action/autobuild@v2
 
     # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
+    # 📚 https://git.io/JvXDH
 
-    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
+    # ✏️ If the Autobuild fails above, remove it and comment the following three lines
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
@@ -66,5 +66,5 @@ jobs:
     #   make bootstrap
     #   make release
 
-    - name: Perform CodeQL220 Analysis
-      uses: github/codeql-action/analyze@v2
+    - name: Perform CodeQG330 tredingheck
+      uses: github/codeql-action/analyze@v4
